fix body overflow in rounded window

--- a/src/jendela.css
+++ b/src/jendela.css
@@ -3,7 +3,6 @@
     outline: none;
     position: absolute;
     box-sizing: unset;
-    overflow: hidden;
     *, ::after, ::before{
         box-sizing: unset;
     }
